--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,7 @@ dependencies:
   path_provider_ex: ^1.0.1
   flutter_file_manager: ^0.2.0
   permission_handler: ^5.0.1+1
+  open_file: ^3.0.3
 
 
   # The following adds the Cupertino Icons font to your application.
